# pet-data

./: .dvcignore  .env.example  .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-15-pet-data-v1.md
docs/superpowers/specs/: 2026-04-15-pet-data-design.md
src/pet_data/: _register.py  cli.py  cli_legacy.py
src/pet_data/augmentation/: __init__.py  distortion_filter.py  traditional_aug.py  video_gen.py
src/pet_data/datasets/: __init__.py  audio_clips.py  vision_frames.py
src/pet_data/processing/: dedup.py  quality_filter.py
src/pet_data/sources/: base.py  coco_pet.py  community.py  extractors.py  hospital.py  local_dir.py  oxford_pet.py  selfshot.py  youtube.py
tests/: conftest.py  conftest_migrations.py  test_adapter.py  test_cli_hydra.py  test_config.py  test_datasets_audio.py  test_datasets_vision.py  test_migrations.py  test_peer_dep_fail_fast.py  test_peer_dep_guards.py  test_plugin_registration.py  test_source_provenance.py  test_store.py  test_store_audio.py  test_version.py
tests/test_augmentation/: __init__.py  test_distortion_filter.py  test_traditional_aug.py  test_video_gen.py
tests/test_processing/: test_dedup.py  test_quality_filter.py
tests/test_sources/: test_base.py  test_coco_pet.py  test_community.py  test_extractors.py  test_hospital.py  test_oxford_pet.py  test_selfshot.py  test_youtube.py
tests/test_storage/: test_migrations.py  test_store.py
tests/test_weak_supervision/: test_autoencoder.py  test_score_anomaly.py
(+14 files in other folders)
