[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pet-data"
version = "1.2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pet-schema @ git+https://github.com/Train-Pet-Pipeline/pet-schema.git@v2.0.0",
    "Pillow>=10.0,<13.0",
    "imagehash>=4.3,<5.0",
    "albumentations>=1.3,<3.0",
    "torch>=2.1,<3.0",
    "torchvision>=0.16,<1.0",
    "scipy>=1.11,<2.0",
    "tenacity>=8.0,<9.0",
    "pyyaml>=6.0,<7.0",
    "dvc>=3.40,<4.0",
    "requests>=2.31,<3.0",
    "hydra-core>=1.3,<1.4",
    "mmengine-lite>=0.10,<0.12",
    "click>=8.1,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
    "mypy",
    "pip-tools",
    "opencv-python-headless>=4.8",
]
youtube = [
    "yt-dlp>=2024.1",
]
community = [
    "praw>=7.7,<8.0",
]
video-decord = [
    "decord>=0.6,<1.0",
]
video-av = [
    "av>=12.0",
]

[project.entry-points."pet_infra.plugins"]
pet_data = "pet_data._register:register_all"

[project.scripts]
pet-data = "pet_data.cli:main"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
